// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requests the location when "from" is not provided 1`] = `
Object {
  "permission": Object {
    "context": "To find the nearest stop",
    "dialogState": undefined,
    "permission": "DEVICE_PRECISE_LOCATION",
  },
  "type": "ASK_FOR_PERMISSION",
}
`;

exports[`requests the location when "from" is not provided 2`] = `Map {}`;

exports[`should not return a list on incompatible surfaces 1`] = `
Object {
  "response": "I couldn't find a stop named \\"Unknown.\\"",
  "type": "TELL",
}
`;

exports[`should not return a list on incompatible surfaces 2`] = `
Map {
  "from" => Object {
    "lifespan": 0,
    "name": "from",
    "parameters": Object {
      "stopId": 4197446,
    },
  },
}
`;

exports[`should return a list on compatible surfaces 1`] = `
Object {
  "list": List {
    "items": Array [
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4197454,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Barnes & Noble",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4209568,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Park Point North",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4212884,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Corner Lot B",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4177296,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Marketplace Mall",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4209570,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Park Point South",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4197446,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Gleason Circle",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4209574,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Target",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4177292,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Colony Manor",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4197450,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Perkins Green",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4177288,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "The Province",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4177298,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Wegmans",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4197480,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Racquet Club",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4177290,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Residence Halls",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4209580,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Jefferson Plaza",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4197466,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Wal-Mart",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4177316,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Riverknoll South",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4177314,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "UC West",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4209582,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "RIT Inn",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4197484,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Global Village",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4209572,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "South Town Plaza",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4209576,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Regal Cinemas",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4209578,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Jefferson & Scutti",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4212882,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Lot B",
      },
      OptionItem {
        "description": undefined,
        "image": undefined,
        "optionInfo": Object {
          "key": "{\\"id\\":4209584,\\"type\\":\\"to\\"}",
          "synonyms": Array [],
        },
        "title": "Tech Park / John St.",
      },
    ],
    "title": "Stops",
  },
  "type": "ASK_WITH_LIST",
}
`;

exports[`should return a list on compatible surfaces 2`] = `
Map {
  "from" => Object {
    "lifespan": 0,
    "name": "from",
    "parameters": Object {
      "stopId": 4197446,
    },
  },
}
`;

exports[`uses a previously authorized location if provided 1`] = `
Object {
  "response": "The following buses are arriving at Gleason Circle. Perkins - Park Point in 11 minutes; Colony Manor / The Province in 16 minutes; RIT Inn in 16 minutes; Racquet Club in 27 minutes; Perkins - Park Point in 32 minutes.",
  "type": "TELL",
}
`;

exports[`uses a previously authorized location if provided 2`] = `
Map {
  "from" => Object {
    "lifespan": 0,
    "name": "from",
    "parameters": Object {
      "stopId": 4197446,
    },
  },
}
`;

exports[`works on a route without any buses 1`] = `
Object {
  "response": "There are no buses traveling from Gleason Circle to Target.",
  "type": "TELL",
}
`;

exports[`works on a route without any buses 2`] = `
Map {
  "from" => Object {
    "lifespan": 0,
    "name": "from",
    "parameters": Object {
      "stopId": 4197446,
    },
  },
}
`;

exports[`works with a location based source and explicit destination 1`] = `
Object {
  "response": "The following buses are traveling from Gleason Circle to Park Point South. Perkins - Park Point in 11 minutes; Perkins - Park Point in 32 minutes.",
  "type": "TELL",
}
`;

exports[`works with a location based source and explicit destination 2`] = `
Map {
  "from" => Object {
    "lifespan": 0,
    "name": "from",
    "parameters": Object {
      "stopId": 4197446,
    },
  },
}
`;

exports[`works with an explicit source and destination 1`] = `
Object {
  "response": "The following buses are traveling from Gleason Circle to Park Point South. Perkins - Park Point in 11 minutes; Perkins - Park Point in 32 minutes.",
  "type": "TELL",
}
`;

exports[`works with an explicit source and destination 2`] = `
Map {
  "from" => Object {
    "lifespan": 0,
    "name": "from",
    "parameters": Object {
      "stopId": 4197446,
    },
  },
}
`;

exports[`works with an explicit source location 1`] = `
Object {
  "response": "The following buses are arriving at Gleason Circle. Perkins - Park Point in 11 minutes; Colony Manor / The Province in 16 minutes; RIT Inn in 16 minutes; Racquet Club in 27 minutes; Perkins - Park Point in 32 minutes.",
  "type": "TELL",
}
`;

exports[`works with an explicit source location 2`] = `
Map {
  "from" => Object {
    "lifespan": 0,
    "name": "from",
    "parameters": Object {
      "stopId": 4197446,
    },
  },
}
`;
